@@ -1,3 +1,8 @@
+2001-05-12  Marcus Brinkmann  <marcus@gnu.org>
+
+	* host.c (initialize_version_info): Clear last byte of KV to make
+	sure that the string is null-terminated.
+
 2000-04-03  Neal H Walfield  <neal@cs.uml.edu>
 
 	* proc.h (struct ids): Drop gids and ngids, we never use
